--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@vonage/server-sdk": "^3.21.0",
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "twilio": "^5.6.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.18",
     "ts-node-dev": "^2.0.0",
